# satisfactory-automated_calculator

./: .env.example  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CHECKLIST_ACTION.md  CLAUDE.md  CONTRIBUTING.md  COPILOT_GUIDE.md  DECISIONS.md  Dockerfile.test  GUIDE.md  GUIDE_DEMARRAGE.md  GUIDE_UTILISATEUR.md  GitVersion.yml  LICENSE  Makefile  NOTION_DOC.md  PLAN_DEVELOPPEMENT.md  RAPPORT_DEPLOIEMENT.md  README.md  RESUME_PLAN_APPLIQUE.md  STATUS_PROJET.md  USER_GUIDE.md  appsscript.json  backup.Makefile  cliff.toml  deploy.Makefile  docker-compose.yml  opencode.json  package-lock.json  package.json  sat_watcher.py  setup.Makefile  sonar-project.properties  tools.Makefile
.chrysa/: STANDARDS.md
.claude/: settings.json
.github/: copilot-instructions.md  copilot-instructions.md.bak  dependabot.yml  labeler.yml  labels.yml  pull_request_template.md
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial_schema.py  002_event_logs.py
backend/src/sat_backend/: config.py  extractor.py  main.py  models.py
backend/src/sat_backend/db/: models.py  session.py
backend/tests/: test_extractor.py
docs/: ADR-001-architecture.md  M-SA-save-analysis-strategy.md  backend-api.md
scripts/: bottleneck-analyzer.js  check-syntax.js  parse-save-json.js  parse-save.js  sat-calc.js
src/: 00_bootstrap.gs  00_core_config.gs  00_core_logging.gs  01_core_helpers.gs  01_core_resilience.gs  01_core_utils.gs  (+47 more)
(+54 files in other folders)
